<resources>
    <string name="app_name">Schooly</string>

    <string name="hellosteve">Привет, я Стив</string>
    <string name="belarus">from Belarus with love)</string>
    <string name="startregtext">Начнем регистрацию!</string>
    <string name="go1">Шаг 1</string>
    <string name="whriteyournick">Введи свой ник</string>
    <string name="go2">Шаг 2</string>
    <string name="writephone">Укажи свой номер телефона</string>
    <string name="go3">Шаг 3</string>
    <string name="writepassword">Придумай пароль</string>
    <string name="meetearly">Мы уже знакомы?</string>
    <string name="phone">Номер</string>
    <string name="password">Пароль</string>

    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_people">People</string>
    <string name="title_profile">Profile</string>

    <string name="toolbar_news">Новости</string>
    <string name="toolbar_people">Люди</string>
    <string name="toolbar_profile">Профиль</string>
    <string name="library">Библиотека</string>
    <string name="recomindation">Рекомендации</string>
    <string name="marks">Недавние оценки</string>
    <string name="plus">+</string>

    <string name="welcome_schooly">Добро пожаловать в Schooly</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="enter">ВОЙТИ</string>
    <string name="nickname">Имя пользователя</string>
    <string name="email">Введите почту</string>
    <string name="pub">Публикации</string>
    <string name="zitats">Цитаты</string>
    <string name="search">Поиск</string>

    <string name="nonts">Уведомления</string>
    <string name="lichnyechats">Личные сообщения</string>
    <string name="group">Беседы</string>
    <string name="profileact">Действия с профилем</string>
    <string name="likeandsubs">(Лайки, подписки и т.д.)</string>
    <string name="videochats">Видеоконференции</string>

    <string name="privacypolicy">Конфиденциальность</string>
    <string name="closeaccount">Закрытый аккаунт</string>

    <string name="support">Поддержка</string>
    <string name="error">Сообщить о проблеме</string>
    <string name="soobchi">Пожалуйста напиши нам
        если ты заметил какую-то недоработку</string>

    <string name="personaldatastring">Личные данные</string>
    <string name="nickstring">Никнейм</string>
    <string name="emailstring">E-mail</string>
    <string name="passwordstrind">Пароль</string>
    <string name="id">id</string>

    <string name="subjects">Предметы</string>
    <string name="russian">Русский язык</string>
    <string name="myrina">Мурина Л. А.</string>
    <string name="algebra">Алгебра</string>
    <string name="arefyeva">Арефьева И.Г.</string>
    <string name="geometry">Геометрия</string>
    <string name="kazakow">Казаков В. В.</string>
    <string name="english">Английский язык</string>
    <string name="lapitskaya">Лапицкая Л. М.</string>
    <string name="fizika">Физика</string>
    <string name="isach">Исаченкова Л. А.</string>
    <string name="geography">География</string>
    <string name="bril">Брилевский М. Н.</string>
    <string name="bel">Белорусский язык</string>
    <string name="valochka">Валочка Г. М.</string>
    <string name="bellit">Белорусская литература</string>
    <string name="praskalovich">Праскалович В. У.</string>

    <string name="searchbook">Поиск книг</string>
    <string name="mybooks">Мои книги</string>
    <string name="friendbooks">Книги друзей</string>

</resources>