<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <ImageView
        android:id="@+id/back_tosettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:elevation="2dp"
        android:layout_margin="2dp"
        android:background="@drawable/corners14"
        android:src="@drawable/ic_arrow___left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/back_tosettings"
            android:text="Настройки"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:fontFamily="@font/montserrat_semibold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonts"
            android:textSize="18sp"
            android:textColor="#656565"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/lichnye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cornersnontifications"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                android:paddingEnd="79dp"
                android:paddingStart="24dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lichnyechats"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/groupsnontifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cornersnontifications"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                android:paddingEnd="200dp"
                android:paddingStart="24dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/dowithprofilenonts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cornersnontifications"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:paddingEnd="36dp"
                android:paddingStart="24dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileact"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeandsubs"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/videochats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cornersnontifications"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                android:paddingEnd="74dp"
                android:paddingStart="24dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videochats"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"/>



            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>