<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">


        <ImageView
            android:id="@+id/back_tomainlibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:elevation="2dp"
            android:layout_margin="2dp"
            android:background="@drawable/corners14"
            android:src="@drawable/ic_arrow___left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/back_tomainlibrary"
            android:text="@string/library"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:fontFamily="@font/montserrat_semibold"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cornerstoolbar"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:elevation="4dp"
                android:layout_marginBottom="13dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp">

                <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchbook"
                android:textColorHint="#656565"
                android:textSize="15sp"
                android:background="@null"
                android:layout_gravity="start|center"
                android:fontFamily="@font/montserrat_semibold"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="3dp"
                android:elevation="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/corners">

                <TextView
                    android:id="@+id/bookss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mybooks"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29 книг"
                    android:textSize="16sp"
                    android:textColor="@color/greytext"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_below="@id/bookss"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="40dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_undraw_bibliophile_hwqc_1"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="8dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="6dp"
                android:elevation="18dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/corners">

                <TextView
                    android:id="@+id/friendbookss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friendbooks"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_undraw_online_1qud_1"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="4dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>